--- a/public/css/main-stylesheet.css
+++ b/public/css/main-stylesheet.css
@@ -1873,6 +1873,7 @@ select {
 }
 
 .widget .ot-widget-timeline .item-date .item-date-day {
+	color:#fff;
 	display: block;
 	float: left;
 	font-size: 31px;
@@ -5981,10 +5982,12 @@ ol .comment-respond form {
 
 .coloralert {
 	display: block;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	color: #fff;
-	padding: 15px 20px;
+	padding: 5px;
 	position: relative;
+	font-size: 14px;
+	color:#383839;
 }
 
 .coloralert a.close-alert {
@@ -5992,7 +5995,6 @@ ol .comment-respond form {
 	top: 15px;
 	right: 20px;
 	line-height: 100%;
-	font-size: 20px;
 }
 
 .coloralert a {
@@ -6000,20 +6002,19 @@ ol .comment-respond form {
 }
 
 .coloralert a:hover {
-	color: rgba(255,255,255,0.5)!important;
+	color: rgba(0,0,0,0.5)!important;
 }
 
 .coloralert > i.fa {
 	float: left;
 	font-size: 30px;
-	line-height: 160%;
-	color: rgba(255,255,255,0.7);
+	color: rgba(0,0,0,0.7);
 }
 
 .coloralert > p {
 	color: inherit!important;
 	display: block;
-	margin-left: 50px;
+	margin-left: 30px;
 	margin-bottom: 0px!important;
 }
 
@@ -6425,6 +6426,67 @@ ol .comment-respond form {
 #sidebar .widget .soc-flipper .card .back {
 	background: #2a2b2c;
 	color: #fff;
+}
+
+
+.widget .comments-kurs-block {
+	display: block;
+}
+
+.widget .comments-kurs-block .item {
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+	margin-bottom: 0px;
+}
+
+.widget .comments-kurs-block .item:last-child {
+	padding-bottom: 0px;
+	margin-bottom: 0px;
+	border-bottom: 0px;
+}
+
+.widget .comments-kurs-block .item-header {
+	display: block;
+	float: left;
+	width: 35px;
+	text-align: center;
+}
+
+.widget .comments-kurs-block .item-header > span,
+.widget .comments-kurs-block .item-header a {
+	display: block;
+	font-size: 12px;
+	font-family: 'Roboto Condensed', sans-serif;
+}
+
+.widget .comments-kurs-block .item-header .image-hover {
+	display: block;
+	margin-bottom: 10px;
+	overflow: hidden;
+	border-radius: 30%;
+}
+
+.widget .comments-kurs-block .item-header img {
+	display: block;
+	width: 35px;
+	height: 35px;
+}
+
+
+.widget .comments-kurs-block .item-content {
+	display: block;
+	margin-left: 40px;
+	position: relative;
+}
+
+.widget .comments-kurs-block .item-content p {
+	display: block;
+	color: #000;
+	font-size: 12px;
+	line-height: 18px;
+	padding: 8px 14px;
+	border-radius: 3px;
+	margin-bottom: 5px;
 }
 
 
